fixed spacing issue

--- a/components/AboutUs/MeetTheTeam/team.module.scss
+++ b/components/AboutUs/MeetTheTeam/team.module.scss
@@ -6,8 +6,6 @@
   // padding: 6rem 4rem;
   position: relative;
   // margin-top: -32vw;
-  padding-top: 4rem;
-  margin-bottom: 8rem;
   z-index: 1;
   // background: linear-gradient(rgba($color: $ln-blue, $alpha: 0.2), transparent);
 }
